project toml and friends

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,5 +1,11 @@
 [mypy]
 
+mypy_path = $MYPY_CONFIG_FILE_DIR/src
+
+packages = hostname
+
+# files = **/*.py
+
 strict = True
 
 # A list of strict things we may wish to turn off
