better file spec in mypy.ini

--- a/mypy.ini
+++ b/mypy.ini
@@ -2,9 +2,9 @@
 
 mypy_path = $MYPY_CONFIG_FILE_DIR/src
 
-packages = hostname
+# packages = hostname
 
-# files = **/*.py
+files = src/**/*.py
 
 strict = True
 
