--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -11,4 +11,4 @@ jobs:
         with:
           requirements_file: "src/requirements.txt"
           python_version: "3.11"
-          path: ''
+          path: 'src/'
