--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -7,8 +7,8 @@ jobs:
   type-checking:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
       - uses: jpetrucciani/mypy-check@master
         with:
           requirements_file: "src/requirements.txt"
           python_version: "3.11"
-          path: 'src/'
