--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -19,4 +19,9 @@ jobs:
           requirements_file: "requirements.txt"
           python_version: "3.11"
           path: ''
+
+  ruff-linting:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
       - uses: jpetrucciani/ruff-check@main
