update checkout version

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -13,8 +13,10 @@ jobs:
   type-checking:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: jpetrucciani/mypy-check@master
+      - name: Checkout
+        uses: actions/checkout@v4.1.1
+      - name: mypy check
+        uses: jpetrucciani/mypy-check@master
         with:
           requirements_file: "requirements.txt"
           python_version: "3.11"
@@ -23,5 +25,7 @@ jobs:
   ruff-linting:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: jpetrucciani/ruff-check@main
+    - name: Checkout
+      uses: actions/checkout@v4.1.1
+    - name: ruff check
+      uses: jpetrucciani/ruff-check@main
