remove src/ from path

--- a/mypy.ini
+++ b/mypy.ini
@@ -1,10 +1,10 @@
 [mypy]
 
-mypy_path = $MYPY_CONFIG_FILE_DIR/src
+# mypy_path = $MYPY_CONFIG_FILE_DIR/src
 
 # packages = hostname
 
-files = src/**/*.py
+# files = src/**/*.py
 
 strict = True
 
