--- a/ruff.toml
+++ b/ruff.toml
@@ -1,12 +1,21 @@
+target-version = "py311"
+line-length = 120
+unfixable = [
+  # Don't touch unused imports
+  "F401",
+  # Avoid trying to fix flake8-bugbear (`B`) violations
+  "B",
+]
+
+[flake8-tidy-imports]
+ban-relative-imports = "all"
+
 [lint]
 # Enable flake8-bugbear (`B`) rules, in addition to the defaults.
 select = ["E4", "E7", "E9", "F", "B"]
 
 # Avoid enforcing line-length violations (`E501`)
 ignore = ["E501"]
-
-# Avoid trying to fix flake8-bugbear (`B`) violations.
-unfixable = ["B"]
 
 # Only ignore variables named "_".
 dummy-variable-rgx = "^_$"
@@ -16,3 +25,8 @@ dummy-variable-rgx = "^_$"
 [lint.per-file-ignores]
 "__init__.py" = ["E402"]
 "**/{tests,docs,tools}/*" = ["E402"]
+# Tests can use magic values, assertions, and relative imports
+"tests/**/*" = ["PLR2004", "S101", "TID252"]
+
+[isort]
+known-first-party = ["hostname"]
