--- a/mypy.ini
+++ b/mypy.ini
@@ -1,10 +1,7 @@
 [mypy]
 
-# mypy_path = $MYPY_CONFIG_FILE_DIR/src
+mypy_path = $MYPY_CONFIG_FILE_DIR/
 
-# packages = hostname
-
-# files = src/**/*.py
 
 strict = True
 
