--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,56 +21,8 @@ dependencies = [
 Repository = "https://github.com/jpgoldberg/python-hostname"
 
 
-[tool]
-
-[tool.hatch.version]
-path = "hostname/__about__.py"
-
-[tool.hatch.envs.default]
-dependencies = [
-  "coverage[toml]>=6.5",
-  "pytest",
-]
-[tool.hatch.envs.default.scripts]
-test = "pytest {args:tests}"
-test-cov = "coverage run -m pytest {args:tests}"
-cov-report = [
-  "- coverage combine",
-  "coverage report",
-]
-cov = [
-  "test-cov",
-  "cov-report",
-]
-
-[[tool.hatch.envs.all.matrix]]
-python = ["3.11", "3.12"]
-
-[tool.hatch.envs.lint]
-detached = true
-dependencies = [
-  "black>=23.1.0",
-  "mypy>=1.4.0",
-  "ruff>=0.0.243",
-  "dnspython",
-  "idna",
-]
-
-[tool.hatch.envs.lint.scripts]
-typing = "mypy --install-types --non-interactive ."
-style = [
-  "ruff {args:.}",
-  "black --check --diff {args:.}",
-]
-fmt = [
-  "black {args:.}",
-  "ruff --fix {args:.}",
-  "style",
-]
-all = [
-  "style",
-  "typing",
-]
+# [tool.hatch]
+# hatchling configuration is in hatch.toml
 
 [tool.black]
 target-version = ["py311", "py312"]
