--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,9 @@ dependencies = [
 ]
 
 [project.urls]
-Repository = "https://github.com/jpgoldberg/python-hostname"
+Source = "https://github.com/jpgoldberg/python-hostname"
+Issues = "https://github.com/jpgoldberg/python-hostname/issues"
+
 
 
 # [tool.hatch]
