--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -15,6 +15,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.1
+      - name: powerset requirement
+        run: pip install powerset-generator
       - name: mypy check
         uses: jpetrucciani/mypy-check@master
         with:
