--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -15,10 +15,12 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.1
+      - name: Install powerset
+        run: pip install powerset-generator
       - name: mypy check
         uses: jpetrucciani/mypy-check@master
         with:
-          requirements_file: "requirements-dev.txt"
+          requirements_file: "requirements.txt"
           python_version: "3.11"
           path: '.'
       - name: Create mypy badge
