--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,10 @@
         "latex",
         "plaintext"
     ],
-    "cmake.configureOnOpen": true
+    "cmake.configureOnOpen": true,
+    "python.testing.pytestArgs": [
+        "."
+    ],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true
 }
