--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -4,7 +4,9 @@ on:
     workflow_dispatch:
     push:
       branches: [ "main" ]
-      paths: 'docs/**'
+      paths:
+        - 'docs/**'
+        - 'hostname/__about__.py'
 
     pull_request:
       branches: [ "main" ]
