--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,11 +1,14 @@
 # This workflow will install Python dependencies, run tests with a single version of Python
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
 
-name: Python application
+name: pytest
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ "main" ]
+    paths:
+      - 'hostname/**'
+      - 'tests/**'
   pull_request:
     branches: [ "main" ]
 
