--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest
-        if [ -f requirements-testing.txt ]; then pip install -r requirements-testing.txt; fi
+        pip install -r requirements-testing.txt
     - name: Test with pytest
       run: |
         pytest
